--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
         "express": "~4.16.1",
         "georedis": "^3.1.3",
         "http-errors": "~1.6.3",
+        "ioredis": "^5.1.0",
         "jade": "~1.11.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.4.0",
@@ -24,7 +25,6 @@
         "nodemon": "^2.0.16",
         "passport": "*",
         "passport-jwt": "*",
-        "redis": "^4.1.1",
         "twig": "^1.15.4"
     }
 }
