--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,14 @@
         "start": "nodemon ./bin/www"
     },
     "dependencies": {
+        "arcgis": "^1.0.2",
         "bcryptjs": "*",
         "body-parser": "*",
         "cookie-parser": "~1.4.4",
         "cors": "*",
         "debug": "~2.6.9",
         "dotenv": "^16.0.1",
+        "esri": "^0.0.1-security",
         "express": "~4.16.1",
         "georedis": "^3.1.3",
         "http-errors": "~1.6.3",
@@ -25,6 +27,7 @@
         "nodemon": "^2.0.16",
         "passport": "*",
         "passport-jwt": "*",
+        "request": "^2.88.2",
         "twig": "^1.15.4"
     }
 }
