--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,12 @@
         "start": "nodemon ./bin/www"
     },
     "dependencies": {
-        "arcgis": "^1.0.2",
+        "arcgis": "^0.0.2",
         "bcryptjs": "*",
-        "coinbase-commerce-node": "^1.0.4",
         "body-parser": "*",
+        "coinbase-commerce-node": "^1.0.4",
         "cookie-parser": "~1.4.4",
-        "cors": "*",
+        "cors": "^2.8.5",
         "debug": "~2.6.9",
         "dotenv": "^16.0.1",
         "esri": "^0.0.1-security",
@@ -22,7 +22,7 @@
         "helmet": "^5.1.0",
         "http-errors": "~1.6.3",
         "ioredis": "^5.1.0",
-        "jade": "~1.11.0",
+        "jade": "^0.29.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.4.0",
         "morgan": "~1.9.1",
@@ -31,9 +31,9 @@
         "nodemon": "^2.0.16",
         "passport": "*",
         "passport-jwt": "*",
+        "path": "^0.12.7",
         "request": "^2.88.2",
         "twig": "^1.15.4",
-        "path": "^0.12.7",
         "uuid": "^8.3.2"
     }
 }
