--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
+    "strictPropertyInitialization": false,
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
@@ -21,6 +22,9 @@
     "lib": [
       "es2020",
       "dom"
+    ],
+    "types": [
+      "googleapis"
     ]
   },
   "angularCompilerOptions": {
