--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@material/dialog": "^14.0.0",
     "agm": "^0.0.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
@@ -30,7 +31,7 @@
     "@angular-devkit/build-angular": "~13.3.0",
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
-    "@types/googlemaps" :  "3.26.15",
+    "@types/googlemaps": "3.26.15",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.7",
