--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
         "jade": "^0.29.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.4.0",
+        "mongoose-paginate-v2": "^1.7.0",
         "morgan": "~1.9.1",
         "multer": "^1.4.5-lts.1",
         "node-cryptojs-aes": "^0.4.0",
