--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
         "@angular/platform-browser": "~13.3.0",
         "@angular/platform-browser-dynamic": "~13.3.0",
         "@angular/router": "~13.3.0",
+        "tailwindcss": "^2.0.0 || ^3.0.0",
         "agm": "^0.0.0",
         "bootstrap": "^5.1.3",
         "rxjs": "~7.5.0",
