--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "@angular/router": "~13.3.0",
         "agm": "^0.0.0",
         "bootstrap": "^5.1.3",
+        "ng2-file-upload": "^1.4.0",
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.11.4"
