--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
         "passport-jwt": "*",
         "path": "^0.12.7",
         "request": "^2.88.2",
+        "stripe": "^9.15.0",
         "twig": "^1.15.4",
         "uuid": "^8.3.2"
     }
