--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "tailwindcss": "^2.0.0 || ^3.0.0",
+    "@stripe/stripe-js": "^1.32.0",
+    "@types/stripe": "^8.0.417",
+    "@types/stripe-v3": "^3.1.27",
     "agm": "^0.0.0",
+    "angularjs-stripe-elements": "^1.0.1",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "material-icons": "^1.11.7",
@@ -29,6 +32,9 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
+    "stripe": "^9.15.0",
+    "stripe-angular": "^1.7.0",
+    "tailwindcss": "^2.0.0 || ^3.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -36,6 +42,7 @@
     "@angular-devkit/build-angular": "~13.3.0",
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/angular": "^1.8.4",
     "@types/googlemaps": "3.26.15",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
